src/css/root.css
/* ... */
/* Reset Margins */
@media only screen and (min-width: 1024px) {

  body,
  html {
    padding: 0;
    margin: 0;
  }
}

/* Scale full website with the viewport width */
@media only screen and (min-width: 2000px) {

  body,
  html {
    font-size: .85vw;
  }
}

/*-- -------------------------- -->
<---         Navigation         -->
<--- -------------------------- -*/
/* Mobile - Top Drop Down */
@media only screen and (max-width: 1023px) {
  #navigation {
    position: fixed;
    top: 0;
    left: 0;
    padding-left: 5%;
    padding-right: 5%;
    width: 100%;
    z-index: 10000;
    height: auto;
  }

  #navigation .background-color-div {
    position: absolute;
    top: 0;
    left: 0;
    background-color: #ffffff;
    width: 100%;
    height: 100%;
    box-shadow: rgba(131, 131, 131, 0.492) 0px 0px 20px 10px;
  }

  #navigation .container {
    padding: 0.8125rem 0;
    width: 96%;
  }

  #navigation .logo {
    display: inline-block;
    height: 1.875rem;
    width: auto;
  }

  #navigation .logo img {
    width: auto;
    height: 100%;
  }

  #navigation .logo .light {
    display: none;
  }

  #navigation .logo .dark {
    display: block;
  }

  #navigation .hamburger-menu {
    position: absolute;
    right: 0rem;
    border: none;
    height: 3rem;
    width: 3rem;
    z-index: 100;
    display: block;
    background: transparent;
    padding: 0;
    top: 50%;
    transform: translateY(-50%);
    transition: top .3s;
  }

  #navigation .hamburger-menu span {
    height: 2px;
    width: 1.875rem;
    background-color: #000;
    display: block;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    transition: background-color 0.3s;
  }

  #navigation .hamburger-menu span:before {
    content: '';
    position: absolute;
    display: block;
    height: 2px;
    width: 80%;
    background: #000;
    opacity: 1;
    top: -6px;
    left: 0;
    transition: width .3s, left .3s, top .3s, transform .5s;
  }

  #navigation .hamburger-menu span:after {
    content: '';
    position: absolute;
    display: block;
    height: 2px;
    width: 80%;
    background: #000;
    opacity: 1;
    top: 6px;
    left: 0;
    transition: width .3s, left .3s, top .3s, transform .3s;
  }

  #navigation .hamburger-menu.clicked span {
    background-color: transparent;
  }

  #navigation .hamburger-menu.clicked span:before {
    width: 100%;
    transform: translate(-50%, -50%) rotate(225deg);
    left: 50%;
    top: 50%;
  }

  #navigation .hamburger-menu.clicked span:after {
    width: 100%;
    transform: translate(-50%, -50%) rotate(-225deg);
    left: 50%;
    top: 50%;
  }

  #navigation #navbar-menu {
    position: fixed;
    right: 0;
    padding: 0;
    width: 100%;
    border-radius: 0 0 0.375em 0.375em;
    z-index: -1;
    overflow: hidden;
    box-shadow: rgba(149, 157, 165, 0.089) 0px 8px 24px;
    background-color: #fff;
    top: 3.7rem;
    padding-top: 0;
    height: 0;
    transition: height 0.3s, padding-top 0.3s, top 0.3s;
  }

  #navigation #navbar-menu ul {
    padding: 0;
    perspective: 700px;
  }

  #navigation #navbar-menu ul li {
    list-style: none;
    margin-bottom: 1.5rem;
    text-align: center;
    transform-style: preserve-3d;
    opacity: 0;
    transform: translateY(-0.4375rem) rotateX(90deg);
    transition: opacity .5s, transform .5s;
  }

  #navigation #navbar-menu ul li:nth-of-type(1) {
    transition-delay: .01s;
  }

  #navigation #navbar-menu ul li:nth-of-type(2) {
    transition-delay: .02s;
  }

  #navigation #navbar-menu ul li:nth-of-type(3) {
    transition-delay: .03s;
  }

  #navigation #navbar-menu ul li:nth-of-type(4) {
    transition-delay: .04s;
  }

  #navigation #navbar-menu ul li:nth-of-type(5) {
    transition-delay: .05s;
  }

  #navigation #navbar-menu ul li:nth-of-type(6) {
    transition-delay: .06s;
  }

  #navigation #navbar-menu ul li:nth-of-type(7) {
    transition-delay: .07s;
  }

  #navigation #navbar-menu ul li a {
    text-decoration: none;
    text-transform: uppercase;
    font-family: 'Merriweather-Sans-Light';
    color: #000;
    font-size: 1rem;
    text-align: center;
    display: inline-block;
    position: relative;
    font-weight: 500;
  }

  #navigation #navbar-menu ul li a.active:before {
    content: '';
    position: absolute;
    display: block;
    height: 0.2rem;
    background: var(--primary);
    opacity: 1;
    bottom: -.5rem;
    border-radius: 0.25rem;
    left: -0.375rem;
    right: -0.375rem;
    z-index: -1;
  }

  #navigation #navbar-menu.open {
    height: auto;
    padding-top: 2.5rem;
    padding-bottom: 2rem;
    z-index: -100;
    border-bottom: 1px solid #626262;
    border-right: 1px solid #626262;
    border-left: 1px solid #626262;
    font-size: 0.8rem;
  }

  #navigation #navbar-menu.open ul li {
    opacity: 1;
    transform: translateY(0) rotateX(0);
  }
}
/* ... */

